# SelfDrivingCar

./: .gitignore  AllSetting.h  AutoThreshold.cpp  AutoThreshold.h  Báo-cáo-CĐS-Destiny.docx  Gradients.h  HLS detection.cpp  HLS detection.h  LICENSE  LaneDetect.cpp  LaneDetect.h  README.md  SignDetect.cpp  SignDetect.h  TrafficSign.cpp  TrafficSign.h  car_control.md  gradients.cpp  lane_detect.md  line_function  line_function.md  object_detect.md
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/file_server/: GetBinaryFileRequest.h  GetBinaryFileResponse.h
devel/lib/Team305/: team305
devel/lib/file_server/: file_server
devel/lib/lane_detect/: lane_detect
devel/lib/pkgconfig/: file_server.pc  lane_detect.pc  team305.pc  video_stream.pc
devel/lib/video_stream/: video_stream
devel/share/Team305/cmake/: team305Config.cmake
devel/share/file_server/cmake/: file_server-msg-extras.cmake  file_serverConfig.cmake
devel/share/lane_detect/cmake/: lane_detectConfig.cmake
devel/share/roseus/ros/file_server/: manifest.l
devel/share/video_stream/cmake/: video_streamConfig.cmake
include/: LaneDetect.h  LineFunction.h  ObjectDetect.h  Setting.h  TrafficSign.h  carcontrol.h  detectlane.h
src/: LaneDetect.cpp  LineFunction.cpp  ObjectDetect.cpp  Source.cpp  TrafficSign.cpp  carcontrol.cpp  detectlane.cpp  main.cpp
src/file_server/: CMakeLists.txt  package.xml
src/file_server/src/: file_server.cpp
src/lane_detect/: CMakeLists.txt  package.xml
src/lane_detect/include/: car_control.h  lane_detect.h  line_function.h  object_detect.h  setting.h  traffic_sign.h
src/lane_detect/launch/: lane_detect.launch
src/lane_detect/src/: car_control.cpp  lane_detect.cpp  line_function.cpp  main.cpp  object_detect.cpp  traffic_sign.cpp
src/team305/: CMakeLists.txt  package.xml
src/team305/include/: car_control.h  lane_detect.h  object_detect.h  setting.h  traffic_sign.h
src/team305/launch/: team305.launch
src/team305/src/: car_control.cpp  lane_detect.cpp  main.cpp  object_detect.cpp  traffic_sign.cpp
src/video_stream/: CMakeLists.txt  package.xml
src/video_stream/launch/: video_stream.launch
src/video_stream/src/: main.cpp
